fixed rotation bug on mobile sizes

--- a/css/experiment.css
+++ b/css/experiment.css
@@ -44,6 +44,10 @@
 }
 
 @media all and (max-width:570px) {
+
+  #cube {
+    transform: rotateX(0deg) rotateY(0deg) !important;
+  }
 .one, .two, .four, .five, .six {
   display: none;
 }
